Complete Java 8 migration: HTTP client, API fixes, and language feature replacements
Co-authored-by: suppatimmo <34195677+suppatimmo@users.noreply.github.com>